--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% Created 2017-07-21 Fri 17:55
+% Created 2017-08-29 Tue 19:58
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -16,10 +16,10 @@
 \usepackage{hyperref}
 \usepackage{minted}
 \date{}
-\title{yes i know we need a title}
+\title{to be defined}
 \hypersetup{
  pdfauthor={Willian Ver Valem Paiva},
- pdftitle={yes i know we need a title},
+ pdftitle={to be defined},
  pdfkeywords={},
  pdfsubject={},
  pdfcreator={Emacs 25.2.1 (Org mode 9.0.9)},
@@ -29,7 +29,7 @@
 \maketitle
 
 \section{Context}
-\label{sec:orgfcdfbb1}
+\label{sec:org7b1bfe5}
  The beginning of XXIth century sees a drastic increase of applications coming as an assistance to numerous human activities,
  among which medicine is one of the main domains. And the use of technology to the healthcare system is the focus today, with
  technologies ranging from robots to assist in surgery to gadgets that measure sugar levels and help diabetic people.
@@ -47,30 +47,52 @@ a complicated barrier.
 
 
 \subsection{state of the art}
-\label{sec:org427a2f8}
+\label{sec:org27f4b13}
 
+\begin{itemize}
+\item talk about the Pittsburgh research
+\item talk about the Aalborg research
+\end{itemize}
 
+\subsection{methodological approach}
+\label{sec:org9ba0b98}
+\begin{itemize}
+\item talk about the use of human knowledge similar to the expert system (one of the ai winters sensitive topic)
+\item using not just image bu also natural language and sound analyses.
+\end{itemize}
 
-\subsection{methodological appro}
-\label{sec:org36dbbd7}
 \section{objectives}
-\label{sec:org82ceda9}
+\label{sec:org310d50e}
 \subsection{expected results}
-\label{sec:orgd3c0933}
+\label{sec:orgbe4a346}
+\begin{itemize}
+\item get a pain assessment on a precise level
+\end{itemize}
 \subsection{scientific and technological challenges}
-\label{sec:orgd7deb1e}
+\label{sec:org1c8f38c}
+\begin{itemize}
+\item to be discussed with Lepetit
+\end{itemize}
 \section{organization}
-\label{sec:org2595ef6}
+\label{sec:orgde7aa5c}
 \subsection{general organization}
-\label{sec:org3f74e21}
+\label{sec:orgc03a989}
 \subsection{planning}
-\label{sec:org04ac87b}
-T0 + 6  months: gathering and study of the data
-T0 + 12 months: assessment based on the facial expression
-T0 + 18 months: assessment of emotions from natural language analyses
-T0 + 24 months: assessment by combining the 2 methods
-T0 + 30 months: formalization, validations publications and theses
-T0 + 36 months: theses and defense
+\label{sec:orgaa41bec}
+
+\begin{itemize}
+\item T0 + 6  months: gathering and study of the data
+
+\item T0 + 12 months: assessment based on the facial expression
+
+\item T0 + 18 months: assessment of emotions from natural language analyses
+
+\item T0 + 24 months: assessment by combining the 2 methods
+
+\item T0 + 30 months: formalization, validations publications and theses
+
+\item T0 + 36 months: theses and defense
+\end{itemize}
 
 
 
