--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% Created 2017-08-29 Tue 19:58
+% Created 2017-09-01 Fri 20:48
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -18,81 +18,108 @@
 \date{}
 \title{to be defined}
 \hypersetup{
- pdfauthor={Willian Ver Valem Paiva},
+ pdfauthor={Willian Ver Valen Paiva},
  pdftitle={to be defined},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.1 (Org mode 9.0.9)},
+ pdfcreator={Emacs 26.0.50 (Org mode 9.0.10)}, 
  pdflang={English}}
 \begin{document}
 
 \maketitle
 
 \section{Context}
-\label{sec:org7b1bfe5}
- The beginning of XXIth century sees a drastic increase of applications coming as an assistance to numerous human activities,
- among which medicine is one of the main domains. And the use of technology to the healthcare system is the focus today, with
- technologies ranging from robots to assist in surgery to gadgets that measure sugar levels and help diabetic people.
- Among those areas, an important one deals with pain, which is a complex subject to master. The main objectives will consist in
- being able to properly measure pain levels is of a great importance, as it will help medical doctors to provide a precise treatment
- and also allow pharmaceutical companies to  have a better feedback for the development of treatments, the last being pharmaceutical or not.
- But pain assessment is not a simple task and has been a challenge even for humans. Many scales and methods have been created to tackle
-such a problem \cite{wong1996wong,mccaffery1999pain,portenoy1996visual,melzack1975mcgill,galer1997development,gracely1988descriptor} with
-limited efficiency. It is still so far difficult to  have an accurate assessment of pain, notably chronic pain.
- As a matter of fact, as pain is a subjective feeling, the most used measurement is the auto evaluation, but even if it gives fairly acceptable
-results, it still falls short on some aspects like simulated pain \cite{gwen2007faces}, or, most commonly, when the patient has difficulties to
-communicate, as is the case of infants and some elderly people \cite{lucey2011automatically}.
- And the creation of a method capable of assessing precisely the level of pain felt by patients can help the present diagnosis system overcome
-a complicated barrier.
+\label{sec:orgb618ff1}
+The beginning of XXIth century sees a drastic increase of applications coming
+as an assistance to numerous human activities, among which medicine is one of
+the main domains. And the use of technology for the healthcare system is the
+focus today, with technologies ranging from robots to assist in surgery to
+gadgets that measure sugar levels and help diabetic people.
+
+Among those areas, an important one deals with pain, which is a complex
+subject to master. The main objectives of the research project, which consists 
+in being able to properly measure pain levels, is of a great importance, as it
+will help medical doctors to provide a precise treatment especially for
+patients suffering from chronic pain condition. It will also allow
+pharmaceutical companies to have a better feedback from their clients for the
+development of treatments, whether they are pharmaceutical or not.  
+
+But pain assessment is not a simple task and has been a long lasting challenge even for
+human evaluators. Many scales and methods have been created to tackle such a problem
+\cite{wong1996wong,mccaffery1999pain,portenoy1996visual,melzack1975mcgill,galer1997development,gracely1988descriptor}
+with limited efficiency. So far, it is still difficult to  have an accurate
+assessment of pain, all the more important when it comes to deal with chronic
+pain.  
+
+As a matter of fact, as pain is a subjective feeling, the most used
+measurement is the auto evaluation of the patient, but even if it gives fairly acceptable
+results, it still falls short on some aspects, notably when it comes to simulated pain
+\cite{gwen2007faces}, or, most commonly, when the patient has difficulties to
+communicate, as is the case of infants and some elderly people
+\cite{lucey2011automatically}. 
+
+And the creation of a method capable of providing a precise assessment for the level of pain
+felt by patients could help the present diagnosis system overcome a complicated
+barrier. 
 
 
-\subsection{state of the art}
-\label{sec:org27f4b13}
+\subsection{State of the art}
+\label{sec:orge104ed8}
+Up to now, some serious research has been done to achieve a reliable pain
+detection via facial expressions. To reach this objective, the systems used datasets of images
+labeled with FACS codes (\emph{Facial Action Coding System}) \cite{lucey2011painful}. 
 
-\begin{itemize}
-\item talk about the Pittsburgh research
-\item talk about the Aalborg research
-\end{itemize}
+The main work done on the subject was the research carried at the  Pittsburgh
+University \emph{"Automatically Detecting Pain in Video Through Facial Action
+Units"} \cite{lucey2011automatically}. This research was mainly based on the
+use of the FACS to detect pain on a given frame, but obtained elementary
+results such as \emph{"pain or no pain"}.  
 
-\subsection{methodological approach}
-\label{sec:org9ba0b98}
-\begin{itemize}
-\item talk about the use of human knowledge similar to the expert system (one of the ai winters sensitive topic)
-\item using not just image bu also natural language and sound analyses.
-\end{itemize}
+Another research, done on the same subject with the same dataset, is the
+research carried at the university of Aalborg \cite{bellantonio2016spatio}.
+This more recent research did achieve more promising results by using a
+combination of convolutional neural networks, and recurrent neural networks.
+By using the combination of these two methods, it was possible to consider
+not uniquely the one frame and FACS, but also to analyse the previous frames
+of the considered sequence, and to get a better precision for the result
+achieving a scale between \emph{"no pain"} , \emph{"weak pain"} or \emph{"strong pain"} what
+is significantly better.  
 
-\section{objectives}
-\label{sec:org310d50e}
-\subsection{expected results}
-\label{sec:orgbe4a346}
-\begin{itemize}
-\item get a pain assessment on a precise level
-\end{itemize}
-\subsection{scientific and technological challenges}
-\label{sec:org1c8f38c}
-\begin{itemize}
-\item to be discussed with Lepetit
-\end{itemize}
-\section{organization}
-\label{sec:orgde7aa5c}
-\subsection{general organization}
-\label{sec:orgc03a989}
-\subsection{planning}
-\label{sec:orgaa41bec}
+\subsection{Methodological approach}
+\label{sec:orgc28aa75}
+This thesis proposes a new approach to the problem by using a new dataset
+generated with the contribution of volunteering people who suffer from
+chronic pain. While a new dataset is a good start, train a deep learning
+model can take large amounts of data.  
 
-\begin{itemize}
-\item T0 + 6  months: gathering and study of the data
+But on the other side we can rely on the practioners who have a long experience and
+knowledge of the problem, and should not be excluded from the scope.
+A practioner uses more than just an image to assess pain, they take many other
+factors into consideration. This is why the project proposes to tap the
+practioners' experience to compensate the small amount of training data, what
+could be compared to the functionning of expert systems
+\cite{giarratano1998expert}.
 
-\item T0 + 12 months: assessment based on the facial expression
+However it is not clear up to this day how it will be possible to reconcile deep
+learning and expert systems. The aim of this thesis will be to explore ways
+to achieve this.  
 
-\item T0 + 18 months: assessment of emotions from natural language analyses
 
-\item T0 + 24 months: assessment by combining the 2 methods
+\section{Objectives}
+\label{sec:org64d7903}
+\subsection{Expected results}
+\label{sec:org9fb423b}
 
-\item T0 + 30 months: formalization, validations publications and theses
+\subsection{Scientific and technological challenges}
+\label{sec:orgd5ce104}
 
-\item T0 + 36 months: theses and defense
-\end{itemize}
+\section{Organization}
+\label{sec:orga849b58}
+\subsection{General organization}
+\label{sec:org1d18b0c}
+
+\subsection{Planning}
+\label{sec:orgbf4df68}
 
 
 
