--- a/repport.bib
+++ b/repport.bib
@@ -8,7 +8,21 @@
   year={2013}
 }
 
+@inproceedings{bellantonio2016spatio,
+  title={Spatio-temporal pain recognition in cnn-based super-resolved facial images},
+  author={Bellantonio, Marco and Haque, Mohammad A and Rodriguez, Pau and Nasrollahi, Kamal and Telve, Taisi and Escarela, Sergio and Gonzalez, Jordi and Moeslund, Thomas B and Rasti, Pejman and Anbarjafari, Gholamreza},
+  booktitle={International Workshop on Face and Facial Expression Recognition from Real World Videos},
+  pages={151--162},
+  year={2016},
+  organization={Springer}
+}
 
+@book{giarratano1998expert,
+  title={Expert systems},
+  author={Giarratano, Joseph C and Riley, Gary},
+  year={1998},
+  publisher={PWS Publishing Co.}
+}
 
 @article{lucey2011automatically,
   title={Automatically detecting pain in video through facial action units},
@@ -97,4 +111,20 @@
   pages={217--225},
   year={1997},
   publisher={Hindawi Publishing Corporation}
+}
+
+@book{ekman1997face,
+  title={What the face reveals: Basic and applied studies of spontaneous expression using the Facial Action Coding System (FACS)},
+  author={Ekman, Paul and Rosenberg, Erika L},
+  year={1997},
+  publisher={Oxford University Press, USA}
+}
+
+@inproceedings{lucey2011painful,
+  title={Painful data: The UNBC-McMaster shoulder pain expression archive database},
+  author={Lucey, Patrick and Cohn, Jeffrey F and Prkachin, Kenneth M and Solomon, Patricia E and Matthews, Iain},
+  booktitle={Automatic Face \& Gesture Recognition and Workshops (FG 2011), 2011 IEEE International Conference on},
+  pages={57--64},
+  year={2011},
+  organization={IEEE}
 }
