--- a/main.org
+++ b/main.org
@@ -6,46 +6,88 @@
 #+LATEX_HEADER: \usepackage{minted}
 
 * Context
-  The beginning of XXIth century sees a drastic increase of applications coming as an assistance to numerous human activities,
-  among which medicine is one of the main domains. And the use of technology to the healthcare system is the focus today, with
-  technologies ranging from robots to assist in surgery to gadgets that measure sugar levels and help diabetic people.
-  Among those areas, an important one deals with pain, which is a complex subject to master. The main objectives will consist in
-  being able to properly measure pain levels is of a great importance, as it will help medical doctors to provide a precise treatment
-  and also allow pharmaceutical companies to  have a better feedback for the development of treatments, the last being pharmaceutical or not.
-  But pain assessment is not a simple task and has been a challenge even for humans. Many scales and methods have been created to tackle
- such a problem cite:wong1996wong,mccaffery1999pain,portenoy1996visual,melzack1975mcgill,galer1997development,gracely1988descriptor with
- limited efficiency. It is still so far difficult to  have an accurate assessment of pain, notably chronic pain.
-  As a matter of fact, as pain is a subjective feeling, the most used measurement is the auto evaluation, but even if it gives fairly acceptable
- results, it still falls short on some aspects like simulated pain cite:gwen2007faces, or, most commonly, when the patient has difficulties to
- communicate, as is the case of infants and some elderly people cite:lucey2011automatically.
-  And the creation of a method capable of assessing precisely the level of pain felt by patients can help the present diagnosis system overcome
- a complicated barrier.
+  The beginning of XXIth century sees a drastic increase of applications coming
+  as an assistance to numerous human activities, among which medicine is one of
+  the main domains. And the use of technology for the healthcare system is the
+  focus today, with technologies ranging from robots to assist in surgery to
+  gadgets that measure sugar levels and help diabetic people.
+
+  Among those areas, an important one deals with pain, which is a complex
+  subject to master. The main objectives of the research project, which consists 
+  in being able to properly measure pain levels, is of a great importance, as it
+  will help medical doctors to provide a precise treatment especially for
+  patients suffering from chronic pain condition. It will also allow
+  pharmaceutical companies to have a better feedback from their clients for the
+  development of treatments, whether they are pharmaceutical or not.  
+  
+  But pain assessment is not a simple task and has been a long lasting challenge even for
+  human evaluators. Many scales and methods have been created to tackle such a problem
+  cite:wong1996wong,mccaffery1999pain,portenoy1996visual,melzack1975mcgill,galer1997development,gracely1988descriptor
+  with limited efficiency. So far, it is still difficult to  have an accurate
+  assessment of pain, all the more important when it comes to deal with chronic
+  pain.  
+  
+  As a matter of fact, as pain is a subjective feeling, the most used
+  measurement is the auto evaluation of the patient, but even if it gives fairly acceptable
+  results, it still falls short on some aspects, notably when it comes to simulated pain
+  cite:gwen2007faces, or, most commonly, when the patient has difficulties to
+  communicate, as is the case of infants and some elderly people
+  cite:lucey2011automatically. 
+  
+  And the creation of a method capable of providing a precise assessment for the level of pain
+  felt by patients could help the present diagnosis system overcome a complicated
+  barrier. 
 
 
-** state of the art
+** State of the art
+   Up to now, some serious research has been done to achieve a reliable pain
+   detection via facial expressions. To reach this objective, the systems used datasets of images
+   labeled with FACS codes (/Facial Action Coding System/) cite:lucey2011painful. 
+   
+   The main work done on the subject was the research carried at the  Pittsburgh
+   University /"Automatically Detecting Pain in Video Through Facial Action
+   Units"/ cite:lucey2011automatically. This research was mainly based on the
+   use of the FACS to detect pain on a given frame, but obtained elementary
+   results such as /"pain or no pain"/.  
+   
+   Another research, done on the same subject with the same dataset, is the
+   research carried at the university of Aalborg cite:bellantonio2016spatio.
+   This more recent research did achieve more promising results by using a
+   combination of convolutional neural networks, and recurrent neural networks.
+   By using the combination of these two methods, it was possible to consider
+   not uniquely the one frame and FACS, but also to analyse the previous frames
+   of the considered sequence, and to get a better precision for the result
+   achieving a scale between /"no pain"/ , /"weak pain"/ or /"strong pain"/ what
+   is significantly better.  
+   
+** Methodological approach
+   This thesis proposes a new approach to the problem by using a new dataset
+   generated with the contribution of volunteering people who suffer from
+   chronic pain. While a new dataset is a good start, train a deep learning
+   model can take large amounts of data.  
+   
+   But on the other side we can rely on the practioners who have a long experience and
+   knowledge of the problem, and should not be excluded from the scope.
+   A practioner uses more than just an image to assess pain, they take many other
+   factors into consideration. This is why the project proposes to tap the
+   practioners' experience to compensate the small amount of training data, what
+   could be compared to the functionning of expert systems
+   cite:giarratano1998expert.
+   
+   However it is not clear up to this day how it will be possible to reconcile deep
+   learning and expert systems. The aim of this thesis will be to explore ways
+   to achieve this.  
 
-   - talk about the Pittsburgh research
-   - talk about the Aalborg research
-
-** methodological approach
-* objectives
-** expected results
-** scientific and technological challenges
-* organization
-** general organization
-** planning
-
-   - T0 + 6  months: gathering and study of the data
-
-   - T0 + 12 months: assessment based on the facial expression
-
-   - T0 + 18 months: assessment of emotions from natural language analyses
-
-   - T0 + 24 months: assessment by combining the 2 methods
-
-   - T0 + 30 months: formalization, validations publications and theses
-
-   - T0 + 36 months: theses and defense
+   
+* Objectives
+** Expected results
+   
+** Scientific and technological challenges
+   
+* Organization
+** General organization
+   
+** Planning
 
 
 
