--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% Created 2017-10-03 Tue 11:08
+% Created 2017-10-03 Tue 13:17
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -29,7 +29,7 @@
 \maketitle
 
 \section{Context}
-\label{sec:org9cd067c}
+\label{sec:org6257aa9}
 The beginning of XXIth century sees a drastic increase of applications coming
 as an assistance to numerous human activities, among which medicine is one of
 the main domains. And the use of technology for the healthcare system is the
@@ -64,7 +64,7 @@ barrier.
 
 
 \subsection{State of the art}
-\label{sec:orgd3a24ca}
+\label{sec:orgacc38c5}
 Up to now, some serious research has been done to achieve a reliable pain
 detection via facial expressions. To reach this objective, the systems used datasets of images
 labeled with FACS codes (\emph{Facial Action Coding System}) \cite{lucey2011painful}.
@@ -84,9 +84,16 @@ not uniquely the one frame and FACS, but also to analyze the previous frames
 of the considered sequence, and to get a better precision for the result
 achieving a scale between \emph{"no pain"} , \emph{"weak pain"} or \emph{"strong pain"} what
 is significantly better.
+What all those approaches has in common is the fact that it uses the same
+data base for the training and it don't give a result with enough accuracy to
+to be a reliable tool. Also both researches rely solely on facial expressions
+and not taking in consideration the other factors like voice tone and the
+semantics used on the dialog to be able to analyze the emotional component
+what is an important factor to be able to properly assess the patient pain
+level \cite{hale1997emotional}.
 
 \subsection{Methodological approach}
-\label{sec:org15c6af8}
+\label{sec:org6b11f7d}
 This thesis proposes a new approach to the problem by using a new dataset
 generated with the contribution of volunteering people who suffer from
 chronic pain. While a new dataset is a good start, train a deep learning
@@ -106,7 +113,7 @@ to achieve this.
 
 
 \section{Objectives}
-\label{sec:org509d72d}
+\label{sec:org4c0a91d}
 As the data on the subject is some how limited one of the main focus of this
 these will be to train \emph{deep learning} models capable of accurate measure pain
 level on a video, using reduced data by importing core decision factors from
@@ -116,7 +123,7 @@ this process should not sacrifice the capabilities of generalization of the
 model.
 
 \subsection{Scientific and technological challenges}
-\label{sec:org151988f}
+\label{sec:org5e5ac54}
 The scientific challenges to be explored on this theses will be:
 \begin{itemize}
 \item Propose an model capable of accurate measure pain with efficacy.
@@ -126,13 +133,13 @@ that can be used to improve the models learning.
 
 
 \section{Organization}
-\label{sec:orgbd708cc}
+\label{sec:org4ca33dd}
 The these will take place on a period of 36 months and during all the duration
 the time will be shared between the hosting laboratory (LABRI university of
 Bordeaux) and the company (Lucine).
 
 \subsection{Planning}
-\label{sec:orgf9a9080}
+\label{sec:orgf531699}
 \begin{itemize}
 \item T0 + 6m:
 \item T0 + 12m:
